# event-board

./: .env.example  README.md  app.py  pyproject.toml  requirements.txt
docs/: _config.yml  index.html  script.js  styles.css
static/css/: style.css
static/js/: auth.js  create_event.js  main.js
templates/: create_event.html  index.html  login.html  register.html
